# ferp-hs

./: .envrc  .gitignore  .vimrc  Cargo.toml  LICENSE  README.md  cabal-ghcjs.project  cabal.project  default.nix  flake.nix  hie.yaml  overlay.nix  shell.nix
assets/: mathjax-config.js
backend/: .ghcid  backend.cabal  config.dhall
backend-api/: .ghcid  CHANGELOG.md  LICENSE  README.md  backend-api.cabal  config.dhall
backend-api/examples/: rest.http
backend-api/scripts/: test-report.sh
backend-api/src/: Api.hs  Auth.hs  Context.hs  Docs.hs  Schema.hs  Server.hs  Types.hs  WebSocket.hs
backend-api/src/Database/Beam/: Named.hs  TH.hs
backend-api/src/Servant/: File.hs  Query.hs
backend-api/test/: ApiSpec.hs  SchemaSpec.hs  ServerSpec.hs  curl.sh
backend-extra/: CHANGELOG.md  README.md  backend-extra.cabal
backend-extra/src/Backend/: DevelMain.hs  Logger.hs
backend/app/: Main.hs
backend/src/: Api.hs  Auth.hs  Backend.hs  Context.hs  OIDC.hs  Server.hs
beam-crud/: README.md  beam-crud.cabal
beam-crud/src/Database/Beam/: API.hs  Deriving.hs  Expand.hs  Extra.hs  Operator.hs
common/: LICENSE  common.cabal
common/src/: Common.hs
common/src/Common/: Api.hs  Auth.hs  Schema.hs  Types.hs
common/src/Common/Schema/: TH.hs
frontend/: .ghcid  config.json  externs.js  frontend.cabal
frontend/app/: Css.hs  Main.hs
frontend/src/: Components.hs  DevelMain.hs  DevelMainPrerender.hs  Frontend.hs  Nordtheme.hs
frontend/src/Components/: Accordion.hs  Alert.hs  Button.hs  Card.hs  Class.hs  Costing.hs  History.hs  Icon.hs  Input.hs  Navigation.hs  Progress.hs  Table.hs  Tag.hs  Timeline.hs  TruckParam.hs
frontend/src/Components/Input/: Basic.hs  Combobox.hs  File.hs  Markdown.hs  Numeric.hs
frontend/src/Frontend/: Api.hs  Container.hs  Context.hs  Core.hs  Crud.hs  Input.hs  Protected.hs  Revision.hs  Truck.hs
frontend/src/Frontend/Crud/: Datagrid.hs  Edit.hs  Lookup.hs  Utils.hs
frontend/src/Reflex/: Markdown.hs
frontend/src/Servant/: Router.hs
keycloak-nordtheme/login/: theme.properties
keycloak-nordtheme/login/resources/css/: login.css
keycloak-nordtheme/login/resources/js/: login.js
nix/: default.nix  haskell-language-server.nix  sources.json
nix/keycloak-config-cli/: default.nix  mvn2nix-lock.json
nix/modules/: ferp-hs.nix  keycloak-config.nix
nix/node/: node-packages.json  node-packages.nix  update.sh
project-m36-crud/: CHANGELOG.md  LICENSE  README.md  project-m36-crud.cabal
project-m36-crud/src/ProjectM36/: Beamable.hs
project-m36-crud/src/ProjectM36/Beamable/: API.hs  Class.hs  Expand.hs  Operator.hs  OrderBy.hs  Tupleable.hs  Util.hs
project-m36-crud/src/ProjectM36/Client/: Monad.hs
reflex-dom-hatex/: CHANGELOG.md  LICENSE  README.md  reflex-dom-hatex.cabal
reflex-dom-hatex/src/Math/LaTeX/: Calculation.hs
reflex-dom-hatex/src/Reflex/Dom/: HaTeX.hs
reflex-dom-mmark/: CHANGELOG.md  reflex-dom-mmark.cabal
reflex-dom-mmark/src/Reflex/Dom/: MMark.hs
servant-ac/: README.md  servant-ac.cabal
servant-ac-server/: README.md  servant-ac-server.cabal
servant-ac-server/src/Servant/: AddSetHeader.hs
servant-ac-server/src/Servant/AccessControl/: Server.hs
servant-ac/src/Servant/: AccessControl.hs  AddSetHeader.hs
servant-crud/: README.md  servant-crud.cabal
servant-crud-server/: README.md  servant-crud-server.cabal
servant-crud-server/src/Servant/Crud/Server/: API.hs  Deriving.hs  DevelMain.hs  Headers.hs  Middleware.hs  OrderBy.hs  QueryObject.hs  QueryOperator.hs
servant-crud/src/Servant/Crud/: API.hs  Deriving.hs  Headers.hs  OrderBy.hs  QueryObject.hs  QueryOperator.hs
servant-crud/test/Servant/Crud/: OrderBySpec.hs  QueryObjectSpec.hs  QueryOperatorSpec.hs
servant-subscriber-reflex/: CHANGELOG.md  servant-subscriber-reflex.cabal
servant-subscriber-reflex/src/Servant/Client/: Reflex.hs
servant-subscriber-reflex/src/Servant/Subscriber/: Reflex.hs
servant-subscriber-reflex/src/Servant/Subscriber/Compat/: Request.hs  Response.hs
truck-js/: Cargo.toml
truck-js/src/: builder.rs  lib.rs  polygon.rs
truck-param-base/: Cargo.toml
truck-param-base/src/: lib.rs  main.rs
truck-param-js/: Cargo.toml  README.md  app.js  bootstrap.js  index.html  script.js
truck-param-js/src/: lib.rs
truck-param-viewer/: Cargo.toml
truck-param-viewer/src/: app.rs  main.rs
