cabal-version:   2.4
name:            backend-api
version:         0.1.0.0
synopsis:        Ferp-hs backend

--description:
-- homepage:

-- bug-reports:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stefan Boere
maintainer:      Stefan Boere <s.boere@hotmail.com>
copyright:       2021 Stefan Boere
category:        Web
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.6.5

flag prof
  description: Compile for profiling.
  manual:      False
  default:     False

common common-options
  build-depends:    base ^>=4.12.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  if flag(prof)
    ghc-options: -fprof-auto -fprof-cafs

  default-language: Haskell2010

library
  import:          common-options

  -- Add your dependencies below
  build-depends:
    , aeson
    , beam-core
    , beam-crud               ^>=0.1
    , beam-migrate
    , beam-postgres
    , bytestring
    , data-default
    , dhall
    , ekg
    , fast-logger
    , http-media
    , microlens
    , monad-logger
    , monad-metrics
    , mtl
    , pwstore-fast
    , resource-pool
    , servant
    , servant-ac
    , servant-aeson-specs
    , servant-auth
    , servant-auth-client
    , servant-auth-docs
    , servant-auth-server
    , servant-auth-swagger
    , servant-client-core
    , servant-crud-server     ^>=0.1
    , servant-docs
    , servant-ekg
    , servant-foreign
    , servant-options
    , servant-quickcheck
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , template-haskell
    , text
    , time
    , wai-cors
    , wai-extra
    , wai-middleware-metrics
    , warp

  exposed-modules:
    Api
    Auth
    Context
    Database.Beam.Named
    Database.Beam.TH
    Docs
    Schema
    Servant.Query
    Server
    Types

  hs-source-dirs:  src

test-suite spec
  import:             common-options
  type:               exitcode-stdio-1.0
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-missing-signatures

  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , backend-api
    , data-default
    , generic-random
    , hspec                ^>=2.7.0
    , hspec-wai
    , http-client
    , http-types
    , QuickCheck
    , servant-aeson-specs
    , servant-auth
    , servant-auth-client
    , servant-client
    , servant-client-core
    , servant-quickcheck
    , servant-server

  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.0

  -- Add new modules in the test folder below (otherwise you get a warning)
  other-modules:
    ApiSpec
    SchemaSpec
    ServerSpec

executable backend-api
  import:         common-options
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  backend-api
