cabal-version:   2.4
name:            backend-extra
version:         0.1.0.0
synopsis:        Ferp-hs backend utilities

--description:
-- homepage:

-- bug-reports:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stefan Boere
maintainer:      Stefan Boere <s.boere@hotmail.com>
copyright:       2021 Stefan Boere
category:        Web
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.6.5

common common-options
  build-depends:    base ^>=4.12.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options

  -- Add your dependencies below
  build-depends:
    , data-default
    , dhall
    , fast-logger
    , foreign-store
    , monad-logger
    , text
    , wai
    , wai-extra
    , warp

  exposed-modules:
    Backend.DevelMain
    Backend.Logger

  hs-source-dirs:  src
