cabal-version:   2.4
name:            backend
version:         0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stefan Boere
maintainer:      Stefan Boere <s.boere@hotmail.com>
copyright:       2021 Stefan Boere
category:        Web
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==8.6.5

common common-options
  build-depends:    base ^>=4.12.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Api
    Auth
    Context
    OIDC
    Server

  other-modules:
  build-depends:
    , aeson
    , backend-extra
    , bytestring
    , common
    , containers
    , cookie
    , data-default
    , dhall
    , frontend
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , jose
    , jose-jwt
    , lucid
    , microlens
    , monad-logger
    , mtl
    , network-uri
    , oidc-client
    , random
    , reflex-dom
    , servant
    , servant-ac-server
    , servant-auth-server
    , servant-rawm
    , servant-server
    , text
    , time
    , uri-bytestring
    , wai
    , wai-extra
    , warp

executable backend
  import:         common-options
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  backend
