cabal-version:      2.4
name:               beam-crud
version:            0.1.0.0
synopsis:           Beam backend for servant-crud

-- description:
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Stefan Boere
maintainer:         s.boere@hotmail.com
category:           Web
extra-source-files: README.md

common test
  hs-source-dirs: test
  ghc-options:    -Wno-missing-export-lists -Wno-implicit-prelude

common common
  build-depends:    base ^>=4.12.0.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-export-lists -Wimplicit-prelude

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , aeson
    , beam-core
    , free
    , servant
    , servant-crud
    , text
    , transformers

  exposed-modules:
    Database.Beam.API
    Database.Beam.Deriving
    Database.Beam.Expand
    Database.Beam.Extra
    Database.Beam.Operator
