cabal-version:   2.4
name:            frontend
version:         0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stefan Boere
maintainer:      Stefan Boere <s.boere@hotmail.com>
copyright:       2021 Stefan Boere
category:        Web
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==8.6.5

common common-options
  build-depends:    base ^>=4.12.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Frontend
  other-modules:
    Components
    Components.Accordion
    Components.Alert
    Components.Button
    Components.Class
    Components.Icon
    Components.Input
    Components.Input.Basic
    Components.Input.Numeric
    Components.Navigation
    Components.Table
    Components.Tag
    DevelMain
    Nordtheme
    Servant.Router

  build-depends:
    , bytestring
    , clay
    , common
    , containers
    , data-default
    , foreign-store
    , http-api-data
    , http-types
    , process
    , random
    , reflex
    , reflex-dom
    , reflex-dom-contrib
    , reflex-dom-pandoc
    , servant
    , text
    , uri-bytestring

executable frontend
  import:         common-options
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , frontend
