cabal-version:   2.4
name:            frontend
version:         0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stefan Boere
maintainer:      Stefan Boere <s.boere@hotmail.com>
copyright:       2021 Stefan Boere
category:        Web
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==8.6.5

flag debug-prerender
  description: Enable prerender develmain module
  manual:      True
  default:     False

common common-options
  build-depends:    base ^>=4.12.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Frontend
    Servant.Router

  other-modules:
    Components
    Components.Accordion
    Components.Alert
    Components.Button
    Components.Card
    Components.Class
    Components.History
    Components.Icon
    Components.Input
    Components.Input.Basic
    Components.Input.Combobox
    Components.Input.File
    Components.Input.Markdown
    Components.Input.Numeric
    Components.Navigation
    Components.Progress
    Components.Table
    Components.Tag
    Components.Timeline
    DevelMain
    Frontend.Api
    Frontend.Container
    Frontend.Context
    Frontend.Core
    Frontend.Crud
    Frontend.Crud.Datagrid
    Frontend.Crud.Edit
    Frontend.Crud.Lookup
    Frontend.Crud.Utils
    Frontend.Input
    Nordtheme

  build-depends:
    , aeson
    , bytestring
    , clay
    , common
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , data-default
    , foreign-store
    , fuzzy
    , ghcjs-dom
    , http-api-data
    , http-types
    , jsaddle
    , lens
    , mtl
    , pandoc-types
    , process
    , random
    , reflex
    , reflex-dom
    , reflex-dom-ace
    , reflex-dom-contrib
    , reflex-dom-pandoc
    , servant
    , servant-ac
    , servant-crud
    , servant-subscriber-reflex
    , text
    , time
    , uri-bytestring

  if flag(debug-prerender)
    other-modules: DevelMainPrerender
    build-depends:
      , http-media
      , lucid
      , servant-crud-server
      , servant-server
      , warp

executable frontend
  import:         common-options
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , frontend

  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

executable frontend-css
  import:         common-options
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  main-is:        Css.hs
  build-depends:
    , base
    , frontend
