cabal-version:   2.4
name:            project-m36-crud
version:         0.0.0.0
synopsis:        See README for more info
description:     See README for more info
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stefan Boere
maintainer:      Stefan Boere <s.boere@hotmail.com>
copyright:       2022 Stefan Boere
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.8.3

common common-options
  build-depends:    base >=4.12 && <5.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  build-depends:
    , bytestring
    , containers
    , data-default
    , deepseq
    , dhall
    , filepath
    , ghc-prim
    , mtl
    , project-m36
    , servant
    , servant-crud
    , text
    , time
    , winery

  hs-source-dirs:  src
  exposed-modules:
    ProjectM36.Beamable
    ProjectM36.Client.Monad

  other-modules:
    ProjectM36.Beamable.API
    ProjectM36.Beamable.Class
    ProjectM36.Beamable.Expand
    ProjectM36.Beamable.Operator
    ProjectM36.Beamable.OrderBy
    ProjectM36.Beamable.Tupleable
    ProjectM36.Beamable.Util
