cabal-version:      2.4
name:               servant-ac
version:            0.1.0.0
synopsis:           Specify access control rules at the type level
description:
  This packages provides combinators to specify simple access control rules
  for Servant API's at the type level. This way it is immediately clear
  which routes are available to which users.
  For more info and usage see the README.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Stefan Boere
maintainer:         s.boere@hotmail.com
category:           Web
extra-source-files: README.md

common common
  build-depends:    base ^>=4.12.0.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-export-lists -Wimplicit-prelude

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: Servant.AccessControl
  build-depends:
    , servant
    , servant-auth
    , servant-auth-client
    , servant-client-core
