cabal-version:      2.4
name:               servant-crud-server
version:            0.1.0.0

-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Stefan Boere
maintainer:         s.boere@hotmail.com
category:           Web
extra-source-files: README.md

common test
  hs-source-dirs: test
  ghc-options:    -Wno-missing-export-lists -Wno-implicit-prelude

common common
  build-depends:    base ^>=4.12.0.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-export-lists -Wimplicit-prelude

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Servant.Crud.Server.API
    Servant.Crud.Server.Deriving
    Servant.Crud.Server.Headers
    Servant.Crud.Server.Middleware
    Servant.Crud.Server.OrderBy
    Servant.Crud.Server.QueryObject
    Servant.Crud.Server.QueryOperator

  -- other-modules:
  build-depends:
    , cassava
    , foreign-store
    , http-client
    , http-link-header
    , http-types
    , microlens
    , mtl
    , network-uri
    , QuickCheck
    , servant-aeson-specs
    , servant-cassava
    , servant-crud
    , servant-docs
    , servant-ekg
    , servant-foreign
    , servant-quickcheck
    , servant-server
    , servant-swagger
    , swagger2
    , text
    , wai
