[package]
name = "truck-param-base"
description = "Truck param is a parametric CAD kernel using the Truck Rust CAD Kernel."
version = "0.1.0"
authors = ["Stefan Boere <s.boere@hotmail.com>"]
edition = "2018"

[dependencies]
truck-modeling = "0.3.0"
serde = "1.0.126" # Serialization
serde_dhall = "0.10.1" # Rust-dhall
serde_json = "1.0.68"
