[package]
name = "truck-param-js"
version = "0.1.0"
edition = "2018"
description = "Javascript wrapper for truck param"
authors = ["Stefan Boere <s.boere@hotmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
truck-js = { version = "0.1.0", path = "../truck-js" }
truck-modeling = "0.3.0"
truck-param-base = { version = "0.1.0", path = "../truck-param-base" }
wasm-bindgen = "0.2.78"

