[package]
name = "truck-param-viewer"
version = "0.1.0"
authors = ["Stefan Boere <s.boere@hotmail.com>"]
edition = "2018"

[dependencies]
notify = "4.0.16"
instant = { version = "0.1.11", features = [ "now" ] }
pollster = "0.2.4"
rayon = "1.5.1"
serde_json = "1.0.68"
truck-meshalgo = { git = "https://github.com/ricosjp/truck" }
truck-modeling = { git = "https://github.com/ricosjp/truck" }
truck-platform = { git = "https://github.com/ricosjp/truck" }
truck-rendimpl = { git = "https://github.com/ricosjp/truck" }
winit = "0.25.0" # low-level crate for handling GUI systems
